test/fail_compilation/jsonBadField2.d
/*
PERMUTE_ARGS:
REQUIRED_ARGS: -Xi=,!
TEST_OUTPUT:
---
Error: unknown JSON field `-Xi=,!`, expected one of `compilerInfo`, `buildInfo`, `modules`, `semantics`
       run 'dmd -man' to open browser on manual
---
*/
